--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-header": "^1.2.2",
     "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.1",
+    "gulp-handlebars": "^4.0.0",
     "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^2.2.0",
